--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p class="bold">100,000 others</p>
         </div>
         <p>
-          Hey look what I was able to do during my 4Geeks Academy class. I did
+          Hey, look what I was able to do during my 4Geeks Academy class. I did
           this Instagram Post Project as Baby Shark in dedication to my kids who
           are obsessed with them. I Hope you like it as much as they do.
         </p>
